--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
 name=SpaceTrek_ClassBot2
-version=0.2.5
+version=0.2.6
 author=SpaceTrek
 maintainer=Andrew Gafford <agafford@spacetrek.com>
 sentence=ClassBot 2.0 by SpaceTrek
@@ -7,4 +7,4 @@ paragraph=The library provides the funtions to use the ClassBot 2.0
 category=Device Control
 url=https://github.com/SpaceTrekKSC/classbot2
 architectures=*
-depends=VL53L0X, Adafruit APDS9960 Library, Adafruit BusIO, Adafruit NeoPixel, BNO055, BQ25887
+depends=VL53L0X, Adafruit APDS9960 Library, Adafruit BusIO, Adafruit NeoPixel, BQ25887
